--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     "paths": {
       "@/*":["src/*"]
     },
+    "typeRoots": ["./node_modules/@types/","./types"]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue","types/**/*.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
