--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@types/p5": "^1.7.4",
     "@vue/compiler-core": "^3.3.4",
+    "@vueuse/core": "^10.7.0",
     "css-doodle": "^0.37.3",
+    "gsap": "^3.12.3",
+    "p5": "^1.9.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vuetify": "^3.3.17"
