--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "typescript": "^5.0.2",
     "unocss": "^0.56.1",
     "vite": "^4.4.5",
+    "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^1.8.5"
   },
   "packageManager": "pnpm@8.11.0"
